<resources>
    <string name="app_name">Project2</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="New_p">New Password</string>
    <string name="Con_p">Confirm Password</string>
    <string name="OK">OK</string>
    <string name="SAVE">SAVE</string>
    <string name="LOAD">LOAD</string>
    <string name="CLEAR">CLEAR</string>
    <string name="SEND">SEND</string>
    <string name="COMMENT">Comment</string>
</resources>
