<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Login"
            style="@style/Button1"
            android:checked="true"
            android:text="Login"
            android:layout_marginLeft="10dp" />
        <RadioButton
            android:id="@+id/Register"
            style="@style/Button1"
            android:text="Register" />

    </RadioGroup>

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:src="@mipmap/add"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/User"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:inputType="none"
        android:textAlignment="textStart"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/NewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Con_p"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_btn"
            style="@style/Button"
            android:layout_marginLeft="4dp"
            android:text="@string/OK" />

        <Button
            android:id="@+id/clear_btn0"
            style="@style/Button"
            android:layout_marginLeft="10dp"
            android:text="@string/CLEAR" />

    </LinearLayout>

</LinearLayout>